--- a/style.css
+++ b/style.css
@@ -16,10 +16,6 @@ body{
   
 }
 
-.banner{
-    
-}
-
 .header{
     padding: 1.5rem 5%
 }
@@ -69,3 +65,30 @@ body{
     border-color: #007bff;
 }
 
+.loader{
+    width: 100%;
+    height:100%;
+    background-color: rgba(0, 0, 0, .8);
+ 
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.preloader{
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    
+    animation: spin 2s linear infinite;
+    position: relative;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
